--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,4 +9,5 @@
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
+    <a href="{% url 'post_new' %}">Form</a>
 {% endblock %}
